--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<meta name="subject" content="">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-    <title></title>
+    <title>포트폴리오</title>
 
 	<meta property="og:url"	content="http://">
 	<meta property="og:type" content="website">
@@ -54,11 +54,23 @@
 				<div class="main_business business">
 					<div class="contain">
 						<div class="head">
-							<h3 class="sub-tit" style="padding:50px 0 50px 0; font-size:26px;">포트폴리오</h3>
+							<h3 class="sub-tit" style="padding:70px 0 70px 0; font-size:40px;">포트폴리오</h3>
 						</div>
 						<ul class="business-list">
 							<li>
-								<a href="2021/2021_gobiz01.html" target="_blank">
+								<a href="http://www.yooclinic.co.kr/" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/yooclinic.jpg"></div>
+									</div>
+									<div class="txt">										
+										<p>유재활의학과의원</p>
+									</div>
+								</div>
+								</a>
+							</li>
+                            <li>
+								<a href="new2/gobiz01.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/2021_gobiz01_s.jpg"></div>
@@ -70,7 +82,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="2021/2021_gobiz02.html" target="_blank">
+								<a href="new2/gobiz02.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/2021_gobiz02_s.jpg"></div>
@@ -82,7 +94,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="2021/dongwha/home/index.html" target="_blank">
+								<a href="new2/dongwha/home/index.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/2021_dongwha_s.jpg"></div>
@@ -95,13 +107,38 @@
 								</a>
 							</li>
 							<li>
-								<a href="2021/dongwha/login/login.html" target="_blank">
+								<a href="new2/dongwha/login/login.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/2021_dongwha_login_s.jpg"></div>
 									</div>
 									<div class="txt">									
 										<p>동화약품 Emall 로그인</p>
+										<p></p>
+									</div>
+								</div>
+								</a>
+							</li>		
+							<li>
+								<a href="new2/its_magic.html" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/thumb_its_magic.jpg"></div>
+									</div>
+									<div class="txt">										
+										<p>잇츠매직 시안</p>
+									</div>
+								</div>
+								</a>
+							</li>							
+							<li>
+								<a href="https://mnwise.com/" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/2021_mnwise_s.jpg"></div>
+									</div>
+									<div class="txt">										
+										<p>엠엔와이즈</p>
 										<p></p>
 									</div>
 								</div>
@@ -121,33 +158,33 @@
 								</a>
 							</li>
 							<li>
-								<a href="http://justicelabor.com/" target="_blank">
+								<a href="new2/tnc_rental.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
-										<div class="business-name"><img src="images/2021_justicelabor_s.jpg"></div>
-									</div>
-									<div class="txt">																	
-										<p>노동법률사무소 공정</p>
-										<p></p>
-									</div>
-								</div>
-								</a>
-							</li>
-							<li>
-								<a href="https://mnwise.com/" target="_blank">
-								<div class="in">
-									<div class="business-tit">
-										<div class="business-name"><img src="images/2021_mnwise_s.jpg"></div>
+										<div class="business-name"><img src="images/thumb_tnc_rental.jpg"></div>
 									</div>
 									<div class="txt">										
-										<p>엠엔와이즈</p>
-										<p></p>
+										<p>TNC 렌탈 시안</p>
 									</div>
 								</div>
 								</a>
 							</li>
+
+							<!--<li>
+								<a href="https://kr.gobizkorea.com/kruser/main.do" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/2021_gobiz01_s.jpg"></div>
+									</div>
+									<div class="txt">										
+										<p>고비즈</p>
+									</div>
+								</div>
+								</a>
+							</li>-->
+
 							<li>
-								<a href="2021/dongwha_sian01.html" target="_blank">
+								<a href="new2/dongwha_sian01.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/dongwha_sian01_s.jpg"></div>
@@ -158,15 +195,28 @@
 									</div>
 								</div>
 								</a>
-							</li>
+							</li>							
 							<li>
-								<a href="2021/dongwha_sian02.html" target="_blank">
+								<a href="new2/dongwha_sian02.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/dongwha_sian02_s.jpg"></div>
 									</div>
 									<div class="txt">										
 										<p>동화약품 (시안2)</p>
+										<p></p>
+									</div>
+								</div>
+								</a>
+							</li>
+							<li>
+								<a href="http://justicelabor.com/" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/2021_justicelabor_s.jpg"></div>
+									</div>
+									<div class="txt">																	
+										<p>노동법률사무소 공정</p>
 										<p></p>
 									</div>
 								</div>
@@ -182,6 +232,80 @@
 									<div class="txt">																	
 										<p>용인서울산업보건연구원</p>
 										<p></p>
+									</div>
+								</div>
+								</a>
+							</li>
+							<li>
+								<a href="https://www.bss.or.kr/load.asp?subPage=290" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/bss2.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>사회연대은행 정기후원 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>							
+							<li>
+								<a href="http://drama.2bstory.com/finefarm/" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/finefarm.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>비변톡스 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>
+							<li>
+								<a href="http://drama.2bstory.com/gnthani/" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/gnthani.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>탑식욕억제환 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>	
+							<li>
+								<a href="https://vote0601.com" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/2022_vote_s.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>전국동시지방선거 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>
+							
+							<li>
+								<a href="http://drama.2bstory.com/newborn/" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/newborn.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>뉴본홀딩스 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="randing/detail_golf.html" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/2021_detail_golf_s.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>까스텔바작 랜딩</p>
 									</div>
 								</div>
 								</a>
@@ -203,7 +327,7 @@
 								</a>
 							</li>-->
 							<li>
-								<a href="2021/hanwha/main.html" target="_blank">								
+								<a href="new2/hanwha/main.html" target="_blank">								
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/2020_hanwha_s.jpg"></div>
@@ -215,7 +339,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="bak/2016_reseat/html/index.html" target="_blank">
+								<a href="new1/reseat/html/index.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/2016_reseat_s.jpg"></div>
@@ -227,7 +351,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="bak/epis_01.html" target="_blank">
+								<a href="new1/epis_01.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/epis_01_s.jpg"></div>
@@ -239,7 +363,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="bak/accuresearch_01.html" target="_blank">
+								<a href="new1/accuresearch_01.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/accuresearch_site01_s.jpg"></div>
@@ -251,7 +375,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="bak/kahis.html" target="_blank">
+								<a href="new1/kahis.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/kahis_s.jpg"></div>
@@ -263,7 +387,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="bak/money.html" target="_blank">
+								<a href="new1/money.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/money_s.jpg"></div>
@@ -275,7 +399,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="bak/edufire.html" target="_blank">
+								<a href="new1/edufire.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/edufire_s.jpg"></div>
@@ -287,7 +411,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="bak/kizcare_site01.html" target="_blank">
+								<a href="new1/kizcare_site01.html" target="_blank">
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/kizcare_site01_s.jpg"></div>
@@ -324,8 +448,9 @@
 								</div>
 								</a>
 							</li>
+
 							<li>
-								<a href="event/hanwha_event01.html" target="_blank">								
+								<a href="randing/hanwha_event01.html" target="_blank">								
 								<div class="in">
 									<div class="business-tit">
 										<div class="business-name"><img src="images/hanwha_event01_s.jpg"></div>
@@ -335,31 +460,7 @@
 									</div>
 								</div>
 								</a>
-							</li>
-							<li>
-								<a href="https://vote0601.com" target="_blank">
-								<div class="in">
-									<div class="business-tit">
-										<div class="business-name"><img src="images/2022_vote_s.jpg"></div>
-									</div>
-									<div class="txt">		
-										<p>전국동시지방선거</p>
-									</div>
-								</div>
-								</a>
-							</li>
-							<li>
-								<a href="randing/2021_detail_golf.html" target="_blank">
-								<div class="in">
-									<div class="business-tit">
-										<div class="business-name"><img src="images/2021_detail_golf_s.jpg"></div>
-									</div>
-									<div class="txt">		
-										<p>까스텔바작 상세페이지<br>골프 캐디백 SET</p>
-									</div>
-								</div>
-								</a>
-							</li>
+							</li>							
 							<li>
 								<a href="randing/milkyway_gagu01.html" target="_blank">
 								<div class="in">
@@ -367,7 +468,7 @@
 										<div class="business-name"><img src="images/milkyway_gagu01_s.jpg"></div>
 									</div>
 									<div class="txt">		
-										<p>밀키웨이 상세페이지<br>해리스 주방 유리수납장 500 / 900</p>
+										<p>밀키웨이 랜딩</p>
 									</div>
 								</div>
 								</a>
@@ -379,7 +480,7 @@
 										<div class="business-name"><img src="images/hanyang_gagu02_s.jpg"></div>
 									</div>
 									<div class="txt">		
-										<p>한양가구<br>MT 531-2020/2018</p>
+										<p>한양가구 랜딩</p>
 									</div>
 								</div>
 								</a>
@@ -391,7 +492,19 @@
 										<div class="business-name"><img src="images/hanyang_gagu03_s.jpg"></div>
 									</div>
 									<div class="txt">		
-										<p>한양가구 <br>쿨메쉬 매직 체어</p>
+										<p>쿨메쉬 매직 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>
+							<li>
+								<a href="cardnews/index.html" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/cardnews_s.jpg"></div>
+									</div>
+									<div class="txt">										
+										<p>카드뉴스 작업물</p>
 									</div>
 								</div>
 								</a>
@@ -436,6 +549,67 @@
 									<div class="txt">										
 										<p>(주)용인서울산업보건연구원</p>
 										<p>2021.  - 2021. </p>
+									</div>
+								</div>
+								</a>
+							</li>
+							<li>
+								<a href="https://www.bss.or.kr/load.asp?subPage=290" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/bss2.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>사회연대은행 정기후원 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>							
+							<li>
+								<a href="http://drama.2bstory.com/finefarm/" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/finefarm.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>비변톡스 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>
+							<li>
+								<a href="http://drama.2bstory.com/gnthani/" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/gnthani.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>탑식욕억제환 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>	
+							<li>
+								<a href="https://vote0601.com" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/2022_vote_s.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>전국동시지방선거 랜딩</p>
+									</div>
+								</div>
+								</a>
+							</li>
+							
+							<li>
+								<a href="http://drama.2bstory.com/newborn/" target="_blank">
+								<div class="in">
+									<div class="business-tit">
+										<div class="business-name"><img src="images/newborn.jpg"></div>
+									</div>
+									<div class="txt">		
+										<p>뉴본홀딩스 랜딩</p>
 									</div>
 								</div>
 								</a>
